# devproje-boilerplate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  configure  go.mod  go.sum  main.go
frontend/: Makefile  eslint.config.js  package.json  vite.config.ts
frontend/src/: App.scss  App.tsx  index.css  main.tsx
frontend/src/components/ui/: button.tsx  theme-toggler.tsx  toggle.tsx
frontend/src/pages/home/: index.tsx
modules/: loader.go
modules/database/: migrate.go  mod.go
routes/: mod.go
src/: main.go  main.rs
src/config/: config.go  mod.rs
src/controller/index/: mod.rs
src/middleware/log/: mod.rs
src/modules/: loader.go  mod.rs
src/modules/database/: mod.rs
src/modules/sample/: mod.rs  service.go
src/routes/: mod.rs
src/util/: str.rs
