[package]
name = "sample-app"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.8"
sqlx = "0.8.6"
dotenv = "0.15.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
mime_guess = "2.0.5"
include_dir = "0.7.4"
chrono = "0.4.42"
